# cargo-apfs-compress

./: AGENTS.md  Cargo.toml  README.md
src/: flock.rs  lib.rs  main.rs  progress.rs
tests/: e2e.rs
