[package]
name = "cargo-apfs-compress"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1.0.101"
applesauce = "0.8.4"
clap = { version = "4.5.59", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.0.2"

[dev-dependencies]
tempfile = "3.25.0"
